fixed layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ table.default tr:nth-child(odd) {
 }
 
 .niInput {
-	width: 36px !important;
+	width: 34px !important;
 	height: 15px !important;
 	float: left !important;
 	border: none !important;
